@@ -1,3 +1,9 @@
+2002-08-26  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
+
+	* lily/score.cc: remove paranoia code.
+
+	* lily/parser.yy: don't include malloc.h
+
 2002-08-25  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
 
 	* flower/polynomial.cc (operator +): optimize += operator. No
